objects/ELV_Order_Event__e/ELV_Order_Event__e.object-meta.xml
<CustomObject>
    <description>Platform Event on Order Object to be consumed by Workato. Clone of Order_Event__e sourcing Quote data from the standard Quote object (NUE) instead of SBQQ__Quote__c, published when an Order is activated.</description>
    <label>ELV Order Event</label>
    <pluralLabel>ELV Order Events</pluralLabel>
</CustomObject>