objects/ELV_Order_Event__e/fields/Opportunity_CloseDate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_CloseDate__c</fullName>
    <description>Opportunity CloseDate</description>
    <label>Opportunity CloseDate</label>
    <type>DateTime</type>
</CustomField>