objects/ELV_Order_Event__e/fields/Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Description__c</fullName>
    <description>Opportunity Description</description>
    <label>Opportunity Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>