objects/ELV_Order_Event__e/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>Opportunity ID</description>
    <label>Opportunity ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>