objects/ELV_Order_Event__e/fields/Opportunity_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_PO_Number__c</fullName>
    <description>Purchase Order Number on the Opportunity object</description>
    <label>Opportunity PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>