objects/ELV_Order_Event__e/fields/Opportunity_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Subtype__c</fullName>
    <description>Opportunity.Subtype__c</description>
    <label>Opportunity Subtype</label>
    <length>80</length>
    <type>Text</type>
</CustomField>