objects/ELV_Order_Event__e/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Opportunity Type</description>
    <label>Opportunity Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>