objects/ELV_Order_Event__e/fields/Order_Subsidiary_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Subsidiary_ID__c</fullName>
    <description>Order Subsidiary ID</description>
    <label>Order Subsidiary ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>