objects/ELV_Order_Event__e/fields/Quote_BillingCity__c.field-meta.xml
<CustomField>
    <fullName>Quote_BillingCity__c</fullName>
    <description>Quote BillingCity</description>
    <label>Quote BillingCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>