objects/ELV_Order_Event__e/fields/Quote_BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>Quote_BillingCountry__c</fullName>
    <description>Quote BillingCountry</description>
    <label>Quote BillingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>