objects/ELV_Order_Event__e/fields/Quote_BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>Quote_BillingStreet__c</fullName>
    <description>Quote Bill To Street</description>
    <label>Quote BillingStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>