objects/ELV_Order_Event__e/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <description>Quote ID</description>
    <label>Quote ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>