objects/ELV_Order_Event__e/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <description>Quote Number</description>
    <label>Quote Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>