objects/ELV_Order_Event__e/fields/Quote_ShippingName__c.field-meta.xml
<CustomField>
    <fullName>Quote_ShippingName__c</fullName>
    <description>Quote ShippingName</description>
    <label>Quote ShippingName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>