objects/ELV_Order_Event__e/fields/Quote_ShippingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>Quote_ShippingPostalCode__c</fullName>
    <description>Quote ShippingPostalCode</description>
    <label>Quote ShippingPostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>