objects/ELV_Order_Event__e/fields/Quote_ShippingState__c.field-meta.xml
<CustomField>
    <fullName>Quote_ShippingState__c</fullName>
    <description>Quote ShippingState</description>
    <label>Quote ShippingState</label>
    <length>80</length>
    <type>Text</type>
</CustomField>