objects/ELV_Order_Event__e/fields/Quote_ShippingStreet__c.field-meta.xml
<CustomField>
    <fullName>Quote_ShippingStreet__c</fullName>
    <description>Quote ShippingStreet</description>
    <label>Quote ShippingStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>